vaidate imput item for now.

--- a/textbbs/erb/error.erb
+++ b/textbbs/erb/error.erb
@@ -30,5 +30,8 @@
             </tr>
     	</table>
         </form>
+        <script>
+        	alert('入力項目が不足しています。')
+        </script>
     </body>
 </html>
