display contribution contents

--- a/textbbs/erb/write.erb
+++ b/textbbs/erb/write.erb
@@ -1,1 +1,1 @@
-require 'erb'	<% template = ERB.new(File.read('shared/_form.erb')) %>	<%= template.result(binding) %>
+require 'erb'require 'erb'	<% template = ERB.new(File.read('shared/_form.erb')) %>	<%= template.result(binding) %>	
