view descending order

--- a/textbbs/shared/_form.erb
+++ b/textbbs/shared/_form.erb
@@ -1,5 +1,5 @@
 <% require 'erb' %>
-<% require 'pstore' %>
+<% require_relative 'order' %>
 <html lang="ja">
     <head>
         <meta charset="UTF-8" />
@@ -31,27 +31,18 @@
                 <td><input type="submit" value="投稿"/></td>
             </tr>
        	</table>
-        <% db = PStore.new('pstore', true) %>
-        <% db.transaction(true) do  %>
-            <%= p 'before' %>
-            <%= p db.roots %>
-            <% db.roots.sort! %>
-            <%= p db.roots %>
-            <%= p 'after' %>
-            <% db.roots.each { |key|  %>
-
+        <% hash = Order.desc_order %>
+        <% hash.each do |key, value| %>
         <table>
             <tr>
-                <td class="contribution_name"><%= db[key]['title'].force_encoding("UTF-8")%></td>
-                <td>投稿者：</td><td class="contribution_title"><%= db[key]['name'].force_encoding("UTF-8")%>
+                <td class="contribution_name"><%= value['title'].force_encoding("UTF-8")%></td>
+                <td>投稿者：</td><td class="contribution_title"><%= value['name'].force_encoding("UTF-8")%>
                 </td><td><%=key%></td>
             </tr>
             <tr>
-                <td><%= db[key]['textarea'].force_encoding("UTF-8")%></td>
+                <td><%= value['textarea'].force_encoding("UTF-8")%></td>
             </tr>
             <hr>
         </table>
-            <% } %>
-        <% end  %>
-        <hr>
+        <% end %>
     </form>
